--- a/public/register.html
+++ b/public/register.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign Up</title>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
+    <script type="module" src="../firebase/firebaseConfig.js" defer></script> <!-- Ensure this is your Firebase configuration -->
+    <script type="module" src="./js/register.js" defer></script> <!-- Add the script to handle form submission -->
 </head>
 <body>
     <h1>Sign Up</h1>
-    <form action="../frontend/user_creds/signup.php" method="post" id="signup-form">
+    <form id="signup-form" method="post">
         <label for="username">Username</label><br>
-        <input type="text" id="username" name="username"><br>
+        <input type="text" id="username" name="username" required><br>
 
         <label for="fullName">Full Name</label><br>
-        <input type="text" id="fullName" name="fullName"><br>
+        <input type="text" id="fullName" name="fullName" required><br>
 
         <label for="email">Email</label><br>
-        <input type="text" id="email" name="email"><br>
+        <input type="email" id="email" name="email" required><br>
 
         <label for="password">Password</label><br>
-        <input type="text" id="password" name="password"><br>
-        <input type="submit" value="Submit">
+        <input type="password" id="password" name="password" required><br>
+        
+        <input type="submit" value="Sign Up">
     </form>
+    <div id="message"></div>
 </body>
 </html>
