--- a/public/register.html
+++ b/public/register.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
-    <script type="module" src="../firebase/firebaseConfig.js" defer></script> <!-- Ensure this is your Firebase configuration -->
-    <script type="module" src="./js/register.js" defer></script> <!-- Add the script to handle form submission -->
+    <script type="module" src="./js/register.js"></script>
+    <script type="module" src="./js/firebaseConfig.js"></script> 
+
 </head>
 <body>
     <h1>Sign Up</h1>
     <form id="signup-form" method="post">
         <label for="username">Username</label><br>
-        <input type="text" id="username" name="username" required><br>
+        <input type="text" id="username" name="username" autocomplete="off" required><br>
 
         <label for="fullName">Full Name</label><br>
-        <input type="text" id="fullName" name="fullName" required><br>
+        <input type="text" id="fullName" name="fullName" autocomplete="off" required><br>
 
         <label for="email">Email</label><br>
-        <input type="email" id="email" name="email" required><br>
+        <input type="email" id="email" name="email" autocomplete="off" required><br>
 
         <label for="password">Password</label><br>
-        <input type="password" id="password" name="password" required><br>
+        <input type="password" id="password" name="password" autocomplete="off" required><br>
         
         <input type="submit" value="Sign Up">
     </form>
